force-app/main/default/objects/Account/fields/vlocity_cmt__BillFormat__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__BillFormat__c</fullName>
    <description>Specifies if customer recieves a detailed or summary bill</description>
    <label>Bill Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detail</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
            <value>
                <fullName>AES - HW Rent</fullName>
            </value>
            <value>
                <fullName>AES - HW Sale</fullName>
            </value>
            <value>
                <fullName>AES - Services</fullName>
            </value>
            <value>
                <fullName>AES - Services + HW Rent</fullName>
            </value>
            <value>
                <fullName>AES 5 USAGE PRODUCTS</fullName>
            </value>
            <value>
                <fullName>DMX-Cinema-Detail</fullName>
            </value>
            <value>
                <fullName>DMX-Detail</fullName>
            </value>
            <value>
                <fullName>DMX-ME-Detail</fullName>
            </value>
            <value>
                <fullName>DMX-Summary</fullName>
            </value>
            <value>
                <fullName>SAAS Invoice Format</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>