force-app/main/default/objects/Account/fields/vlocity_cmt__BillFrequency__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__BillFrequency__c</fullName>
    <description>The frequency at which bills are generated such as Monthly, Quarterly or Weekly. Part of the billing profile of a customer or billing account.</description>
    <label>Bill Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
            </value>
            <value>
                <fullName>Bi Monthly</fullName>
            </value>
            <value>
                <fullName>Bi Yearly</fullName>
            </value>
            <value>
                <fullName>Ten yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>