force-app/main/default/objects/Account/fields/vlocity_cmt__CustomerClass__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CustomerClass__c</fullName>
    <description>Grouping of accounts by attributes and used to drive accounting processes, business logic, and validation rules (i.e. residential, SMB, C&amp;I, etc.)</description>
    <label>Customer Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C&amp;I</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>EGB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>