force-app/main/default/objects/Account/fields/VRM__c.field-meta.xml
<CustomField>
    <fullName>VRM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VRM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>