force-app/main/default/objects/Account/fields/VRM_TL__c.field-meta.xml
<CustomField>
    <fullName>VRM_TL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VRM TL</label>
    <length>10</length>
    <type>Text</type>
</CustomField>