force-app/main/default/objects/Account/fields/ZSM__c.field-meta.xml
<CustomField>
    <fullName>ZSM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ZSM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>