force-app/main/default/objects/Account/validationRules/ARTL_AccountRecordTypeChangeRestrict.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_AccountRecordTypeChangeRestrict</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(RecordTypeId) &amp;&amp; $Profile.Name != &quot;System Administrator&quot;</errorConditionFormula>
    <errorMessage>Oops, Insufficient Privileges to change the record type after account is created. Please contact your System Administrator for more information.</errorMessage>
</ValidationRule>