force-app/main/default/objects/Account/validationRules/ARTL_BANameValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_BANameValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
(
 RecordType.DeveloperName == &apos;Business&apos;,
 NOT(REGEX( Name ,&quot;[a-zA-Z0-9 &amp;./&apos;,_()-]*&quot;))
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Business Account Name should not contain any Special Characters except &amp;./&apos;,_()-</errorMessage>
</ValidationRule>