force-app/main/default/objects/Account/validationRules/ARTL_BillingAddress.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_BillingAddress</fullName>
    <active>true</active>
    <description>Billing Address Mandatory</description>
    <errorConditionFormula>IF(OR(ISBLANK(BillingStreet),ISBLANK(BillingCity), ISBLANK(BillingPostalCode),ISBLANK(BillingState), ISBLANK( BillingCountry))&amp;&amp; (RecordType.DeveloperName = &apos;Business&apos; || RecordType.DeveloperName = &apos;BillingAggregator&apos;),true,false)</errorConditionFormula>
    <errorMessage>Billing Address is Mandatory</errorMessage>
</ValidationRule>