force-app/main/default/objects/Account/validationRules/ARTL_CategoryMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_CategoryMandatory</fullName>
    <active>true</active>
    <description>Category is Mandatory</description>
    <errorConditionFormula>IF(RecordType.DeveloperName = &apos;Business&apos;  &amp;&amp;  ISPICKVAL( ARTL_Category__c , &quot;&quot;) ,true,false)</errorConditionFormula>
    <errorMessage>Category is Mandatory</errorMessage>
</ValidationRule>