force-app/main/default/objects/Account/validationRules/ARTL_CEOps_SAM_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_CEOps_SAM_Edit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( Name ), OR($Permission.ARTL_CE_Ops_User, $Permission.SAM_TL_and_Above_Role ) )</errorConditionFormula>
    <errorMessage>Edit on this record is prevented</errorMessage>
</ValidationRule>