force-app/main/default/objects/Account/validationRules/ARTL_StatusManualUpdateNotAllowed.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_StatusManualUpdateNotAllowed</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(
        NOT( $Profile.Name = &quot;System Administrator&quot;),
        ISCHANGED( vlocity_cmt__Status__c ) ,
        OR(ISPICKVAL(PRIORVALUE(vlocity_cmt__Status__c),&apos;Active&apos;),
         ISPICKVAL(PRIORVALUE(vlocity_cmt__Status__c),&apos;Approved&apos;))
    ),
    AND(
        NOT(
            OR(
               $Permission.ARTL_AccountStatusUpdateAllowed, 
               $Profile.Name == &quot;System Administrator&quot;
            )
        ), 
        ISCHANGED( vlocity_cmt__Status__c )
    )
)</errorConditionFormula>
    <errorDisplayField>vlocity_cmt__Status__c</errorDisplayField>
    <errorMessage>You don&apos;t have permissions to update the Account Status. Please contact your Administrator for permissions.</errorMessage>
</ValidationRule>