force-app/main/default/objects/Account/validationRules/ARTL_ValidateRegistrationNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_ValidateRegistrationNumber</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     NOT(ISBLANK(ARTL_Registration_Number__c)),
     NOT(REGEX( ARTL_Registration_Number__c , &quot;^[0-9]*$&quot;))
)</errorConditionFormula>
    <errorDisplayField>ARTL_Registration_Number__c</errorDisplayField>
    <errorMessage>Only Numeric Values (0-9) are allowed in Registration Number. Please remove any alphabets and/or special characters.</errorMessage>
</ValidationRule>