force-app/main/default/objects/Account/listViews/My_Billing_Accounts_by_Team.listView-meta.xml
<ListView>
    <fullName>My_Billing_Accounts_by_Team</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>PARENT_NAME</columns>
    <columns>ARTL_Customer_Segment__c</columns>
    <columns>ARTL_Business_Circle_Region__c</columns>
    <columns>ARTL_Service_Segment__c</columns>
    <columns>ARTL_Vertical_Segment__c</columns>
    <columns>vlocity_cmt__Status__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Team</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.vlocity_cmt__Billing</value>
    </filters>
    <label>My Billing Accounts by Team</label>
</ListView>