force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>PARENT_NAME</columns>
    <columns>ARTL_Customer_Segment__c</columns>
    <columns>ARTL_Business_Circle_Region__c</columns>
    <columns>ARTL_Service_Segment__c</columns>
    <columns>ARTL_Vertical_Segment__c</columns>
    <columns>vlocity_cmt__Status__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>